--- a/main.css
+++ b/main.css
@@ -1,10 +1,13 @@
 body {
-    background-color: whitesmoke;
+    background-color: black;
+    color: white;
 }
 
 table.game {
+    background-color: #eee;
     margin-left: auto;
     margin-right: auto;
+    border-radius: 5px;
 }
 
 td.game {
